--- a/pom.xml
+++ b/pom.xml
@@ -10,9 +10,10 @@
   <name>aoc</name>
   <url>http://maven.apache.org</url>
 
-  <properties>
-    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-  </properties>
+	<properties>
+		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+		<java.version>1.8</java.version>
+	</properties>
 
   <dependencies>
     <dependency>
